# RustTranslator

./: .gitignore  README.md  package.json
.github/workflows/: build.yml  release.yml
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard.rs  glossary.rs  lib.rs  main.rs  translator.rs
