[package]
name = "rust-translator"
version = "0.1.0"
description = "Lightweight translation app"
authors = ["you"]
edition = "2021"

[lib]
name = "rust_translator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
uuid = { version = "1", features = ["v4"] }
dirs = "6"
arboard = "3"
tokio = { version = "1", features = ["full"] }
